--- a/PWA/src/index.html
+++ b/PWA/src/index.html
@@ -29,7 +29,7 @@
         </button>
     </div>
     <div class="col-8 nav-title-col">
-        <h1 id="nav-title">INFO: CAT</h1>
+        <h1 id="nav-title"></h1>
     </div>
     <div class="col-2">
         <button id="nav-home-btn">
