--- a/PANEL/src/index.html
+++ b/PANEL/src/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    
+
+    <script>const RESOURCE_BASE_URL = "{{ROOT}}";</script>
+
     <link rel="stylesheet" href="{{ROOT}}/css/panel-style.min.css">
     
     <title>App4Refs - Control Panel</title>
