--- a/PWA/src/panel.html
+++ b/PWA/src/panel.html
@@ -8,24 +8,26 @@
 
     <script>const RESOURCE_BASE_URL = "{{ROOT}}";</script>
 
-    <link rel="stylesheet" href="{{ROOT}}/css/panel-style.min.css">
+    <link rel="stylesheet" href="{{ROOT}}/css/style.panel.min.css">
     
     <title>App4Refs - Control Panel</title>
 </head>
 <body>
-    <form class="form-signin" id="form-signin">
-      <img class="mb-4" src="img/app4refs.png" alt="" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">App4Refs - Control Panel</h1>
-      <label for="inputUser" class="sr-only">User</label>
-      <input type="text" id="inputUser" class="form-control" placeholder="User" required autofocus>
-      <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-    </form>    
+    <main class="login">
+        <form class="form-signin" id="form-signin">
+          <img class="mb-4" src="{{ROOT}}/android-chrome-512x512.png" alt="" width="72" height="72">
+          <h1 class="h3 mb-3 font-weight-normal">App4Refs - Control Panel</h1>
+          <label for="inputUser" class="sr-only">User</label>
+          <input type="text" id="inputUser" class="form-control" placeholder="User" required autofocus>
+          <label for="inputPassword" class="sr-only">Password</label>
+          <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        </form>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="{{ROOT}}/js/panel-javascript.min.js"></script>
+    <script src="{{ROOT}}/js/javascript.panel.min.js"></script>
 </body>
 </html>
