--- a/PWA/src/panel.html
+++ b/PWA/src/panel.html
@@ -27,7 +27,12 @@
     </main>
 
     <main class="panel container">
-        <div class="row"><h4></h4></div>
+        <ul class="nav justify-content-end">
+            <li class="nav-item"><h4></h4></li>
+            <li class="nav-item">
+                <button class="btn btn-primary" type="button" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> Logout</button>
+            </li>
+        </ul>
         <div class="row">
             <div class="col-2" id="itemTypesCol">
                 <div class="list-group" id="itemTypes">
