Item move + error log
Now the item movement is complete and the panel logs errors in a bar at the bottom

--- a/PWA/src/panel.html
+++ b/PWA/src/panel.html
@@ -47,6 +47,7 @@
                 </ul>
             </div>
         </div>
+        <div id="errorDisplay"></div>
     </main>
 
     <div class="modal fade" id="deletionModal" tabindex="-1" role="dialog" aria-labelledby="deletionModal" aria-hidden="true">
