--- a/PWA/src/panel.html
+++ b/PWA/src/panel.html
@@ -42,7 +42,12 @@
                 <div class="list-group" id="categories">
                 </div>
             </div>
-            <div class="col-8" id="itemsCol">
+            <div class="col-8" id="itemsCol" hidden>
+                <div class="alert alert-info">
+                    Category code: <strong id="categoryCode"></strong><br>
+                    Category name: <strong id="categoryName"></strong><br>
+                    Link: <a id="categoryLink"></a>
+                </div>
                 <ul class="list-unstyled" id="items">
                 </ul>
             </div>
