Added option to change the order priority
The order priority of the items can now be set

--- a/PWA/src/panel.html
+++ b/PWA/src/panel.html
@@ -44,13 +44,12 @@
                 <div class="list-group" id="categories"></div>
             </div>
             <div class="col-8" id="itemsCol" hidden>
-                <div class="alert alert-info">
+                <div class="alert alert-info" id="categoryInfo">
                     Category code: <strong id="categoryCode"></strong><br>
                     Category name: <strong id="categoryName"></strong><br>
                     Link: <a id="categoryLink"></a>
                 </div>
-                <ul class="list-unstyled" id="items">
-                </ul>
+                <ul class="list-unstyled" id="items"></ul>
             </div>
         </div>
         <div id="errorDisplay"></div>
