--- a/PWA/src/panel.html
+++ b/PWA/src/panel.html
@@ -18,6 +18,7 @@
         <form class="form-signin" id="form-signin">
           <img class="mb-4" src="{{ROOT}}/android-chrome-512x512.png" alt="" width="72" height="72">
           <h1 class="h3 mb-3 font-weight-normal">App4Refs - Control Panel</h1>
+          <div class="alert alert-danger" id="sessionExpired" style="display:none;">The previous session has expired.</div>
           <label for="inputUser" class="sr-only">User</label>
           <input type="text" id="inputUser" class="form-control" placeholder="User" required autofocus>
           <label for="inputPassword" class="sr-only">Password</label>
