Panel favicon and width
Now the panel has a favicon
Now the panel has a min-width of 600px

--- a/PWA/src/panel.html
+++ b/PWA/src/panel.html
@@ -10,6 +10,12 @@
     <script>const RESOURCE_BASE_URL = "{{ROOT}}";</script>
 
     <link rel="stylesheet" href="{{ROOT}}/css/style.panel.min.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ROOT}}/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ROOT}}/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ROOT}}/favicon-16x16.png">
+    <link rel="mask-icon" href="{{ROOT}}/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="icon" href="{{ROOT}}/favicon.ico">
     
     <title>App4Refs - Control Panel</title>
 </head>
