--- a/PWA/src/panel.html
+++ b/PWA/src/panel.html
@@ -36,6 +36,8 @@
     <main class="panel container">
         <ul class="nav justify-content-end">
             <li class="nav-item"><h4></h4></li>
+            <li class="nav-item" style="flex-grow: 1;">
+                <button class="btn btn-danger btn-sm" type="button" id="changePasswordBtn"  data-toggle="modal" data-target="#passwordChangeModal"><i class="fas fa-key"></i> Change password</button></li>
             <li class="nav-item">
                 <button class="btn btn-secondary" type="button" id="addItemBtn"><i class="fas fa-plus"></i> New item</button>
             </li>
@@ -94,6 +96,42 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-primary" id="changeImageBtn">Change image</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="passwordChangeModal" tabindex="-1" role="dialog" aria-labelledby="passwordChangeModal" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Password change</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="currentPass">Current password</label>
+                            <input type="password" class="form-control" id="currentPass" placeholder="Current password" required>
+                            <small id="invalidCurrentPass" class="form-text text-danger"></small>
+                        </div>
+                        <div class="form-group">
+                            <label for="newPass">New password</label>
+                            <input type="password" class="form-control" id="newPass" placeholder="New password" required>
+                            <small id="invalidNewPass" class="form-text text-danger"></small>
+                        </div>
+                        <div class="form-group">
+                            <label for="repeatPass">Repeat new password</label>
+                            <input type="password" class="form-control" id="repeatPass" placeholder="Repeat new password" required>
+                            <small id="invalidRepeatPass" class="form-text text-danger"></small>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-danger" id="confirmPasswordBtn">Change password</button>
                 </div>
             </div>
         </div>
